# SiMAS

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
examples/: binary  code.asm  code_02.asm  code_03.asm
module/: CMakeLists.txt
module/decoder/: CMakeLists.txt
module/decoder/include/: decoder.hpp
module/decoder/src/: decoder.cpp
module/instruction/: CMakeLists.txt
module/instruction/include/: instruction.hpp  instructionlist.hpp
module/instruction/src/: instruction.cpp
module/parser/: CMakeLists.txt
module/parser/include/: parser.hpp  parser_exception.hpp
module/parser/src/: parser.cpp  parser_exception.cpp
utils/: CMakeLists.txt
utils/getopt/: CMakeLists.txt
utils/strmanip/: CMakeLists.txt
utils/strmanip/include/: strmanip.hpp
utils/strmanip/src/: strmanip.cpp
